kubernetes/apps/kopiur-system/kopiur/repository/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
spec:
  hostnames:
    - kopia.${LIMITED_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: truenas-kopia-ui
          port: 51515
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
